# ucoap

./: .gitignore  CMakeLists.txt  README.md  TODO.md  manifest.h.in  ucoap.c  ucoap.h  ucoap_helpers.c  ucoap_helpers.h  ucoap_tcp.c  ucoap_tcp.h  ucoap_udp.c  ucoap_udp.h  ucoap_utils.c  ucoap_utils.h
examples/: CMakeLists.txt  blockwise.c  externalinterface.c
